@@ -43,7 +43,7 @@ public abstract class AbstractCircuitTypeInfo extends AbstractTypeInfo {
     @Override
     public final AbstractBlockInterface fabric() {
         try {
-            return _typeClass.newInstance();
+            return _typeClass.getDeclaredConstructor().newInstance();
         } catch (Throwable ex) {
             System.err.println("error: " + _typeClass);
             ex.printStackTrace();
